Fixing navigation bars for customizations

--- a/_layouts/page_logged_in.jade
+++ b/_layouts/page_logged_in.jade
@@ -4,4 +4,8 @@ html(lang='en')
         link(href="/css/syntax-highlighting-github-style.css" rel="stylesheet")
     body
         include navbar_home
-        block content
+        if (custom_navigation)
+            #customer
+                block content
+        else
+            block content
