add conditional tag for IE8 and lower

--- a/_layouts/head.jade
+++ b/_layouts/head.jade
@@ -10,5 +10,7 @@ head
 
   //if IE
     link(rel='shortcut icon', href='/assets/favicons/favicon.ico')
+  //if lt IE 9
+    link(rel='stylesheet', type='text/css', href='legacy.css')
   link(rel='icon', href='/assets/favicons/favicon-modern.ico')
   link(href="/css/custom-style.css" rel="stylesheet")
