--- a/_layouts/head.jade
+++ b/_layouts/head.jade
@@ -11,7 +11,8 @@ head
   //if IE
     link(rel='shortcut icon', href='/assets/favicons/favicon.ico')
   link(rel='icon', href='/assets/favicons/favicon-modern.ico')
-  
   //if lt IE 9
+    link(rel='stylesheet', type='text/css', href='legacy.css')
+  // if lte IE 8
     link(rel='stylesheet', type='text/css', href='legacy.css')
   link(href="/css/custom-style.css" rel="stylesheet")
