--- a/_layouts/head.jade
+++ b/_layouts/head.jade
@@ -12,4 +12,4 @@ head
   //if IE
     link(rel='shortcut icon', href='/assets/favicons/favicon.ico')
   link(rel='icon', href='/assets/favicons/favicon-modern.ico')
-  link(href="/css/custom-style.css" rel="stylesheet")
+  link(href="/css/jade-stylesheet.css" rel="stylesheet")
