--- a/_mixins/user-mixins.jade
+++ b/_mixins/user-mixins.jade
@@ -6,7 +6,7 @@ mixin team-mentor-summary
     table
       tr
         td
-          .lp-icons.fix-vulnerabilities
+          .fix-vulnerabilities
         td
           include:marked ../../TM_Static/content/getting-started/summary-point-1.md
       tr
