--- a/_mixins/user-mixins.jade
+++ b/_mixins/user-mixins.jade
@@ -11,12 +11,12 @@ mixin team-mentor-summary
           include:marked ../../TM_Static/content/getting-started/summary-point-1.md
       tr
         td
-          .lp-icons.reduce-vulnerabilities
+          .reduce-vulnerabilities
         td
           include:marked ../../TM_Static/content/getting-started/summary-point-2.md
       tr
         td
-          .lp-icons.improve-process
+          .improve-process
         td
           include:marked ../../TM_Static/content/getting-started/summary-point-3.md
 
