Minor fixes to display customer logo appropriately

--- a/_layouts/page_logged_out.jade
+++ b/_layouts/page_logged_out.jade
@@ -3,7 +3,7 @@ html(lang='en')
     include head
     body
         include navbar_logged_out
-        if (custom_navigation)
+        if (global.custom.custom_navigation)
             #customer
                 #landing-page
                     block content
