Fixing name for the first name form field

--- a/shared-mixins/globals.jade
+++ b/shared-mixins/globals.jade
@@ -36,7 +36,7 @@ mixin email-input
 
 mixin first-name-input
   label(for='firstname') First Name
-  input(type='text', id='firstname', name='firstName', placeholder='First Name',value='#{viewModel?viewModel.firstname:""}',required,maxlength='100')
+  input(type='text', id='firstname', name='firstname', placeholder='First Name',value='#{viewModel?viewModel.firstname:""}',required,maxlength='100')
 
 mixin last-name-input
   label(for='lastname') Last Name
