When No TM banner is displayed, the option to search and sign off should be enabled.

--- a/_layouts/navbar_custom_no_tm.jade
+++ b/_layouts/navbar_custom_no_tm.jade
@@ -5,3 +5,6 @@ include ../_mixins/links.jade
         #customer-navigation(style={background:global.custom.custom_navigation.backgroundColor, height:global.custom.custom_navigation.height})
             #customer-logo
                 img(src=global.custom.custom_navigation.logo)
+    #team-mentor-navigation
+        #links
+            +links-navbar__home
