build new customisations

--- a/_layouts/page_logged_in.jade
+++ b/_layouts/page_logged_in.jade
@@ -4,8 +4,11 @@ html(lang='en')
         link(href="/css/syntax-highlighting-github-style.css" rel="stylesheet")
     body
         include navbar_home
-        if (custom_navigation)
+        //if (custom_navigation)
             #customer
                 block content
-        else
+        //else
+            block content
+
+        #customer
             block content
