add logos to customizations

--- a/_layouts/navbar_home.jade
+++ b/_layouts/navbar_home.jade
@@ -5,6 +5,7 @@ include ../_mixins/links.jade
         a(href='/user/main.html')
             #tm-logo
         #customer-logo
+          img(src='https://tmdev01-lloyds.teammentor.net/logos/for_the_journey_logo.jpg')
         #links
             +links-navbar__home
             ul#message
