--- a/_layouts/navbar_home.jade
+++ b/_layouts/navbar_home.jade
@@ -1,40 +1,42 @@
 include ../_mixins/links.jade
-
 .fixed
-    #team-mentor-navigation
-        a(href='/user/main.html')
-            #tm-logo
-        #links
-            +links-navbar__home
-            ul#message
-                li
-                    +mail-icon
-                    span Found an issue? Send us
-                        =  ' '
-                        a#tm-support-email(href="mailto:support@securityinnovation.com") an email
-                        =  '.'
+    //If customizations are enabled
+    if (global.custom && global.custom.custom_navigation)
+        //Hides tm logo and shows navbar
+        if(global.custom.custom_navigation.NoTm)
+            #team-mentor-navigation(class=global.custom.custom_navigation.navbarclass)
+                a(href='/user/main.html')
+                    #tm-logo(class=global.custom.custom_navigation.logoclass)
+                        img(src=global.custom.custom_navigation.logo)
+                #links
+                    +links-navbar__home
+                    ul#message
+                        li
+                            +mail-icon
+                            span Found an issue? Send us
+                                =  ' '
+                                a#tm-support-email(href="mailto:support@securityinnovation.com") an email
+                                =  '.'
 
-    //if (custom)
+        else
+            #team-mentor-navigation
+                a(href='/user/main.html')
+                    #tm-logo
+                #customer-logo
+                    img(src=global.custom.custom_navigation.logo)
+                #links
+                    +links-navbar__home
+                    ul#message
+                        li
+                            +mail-icon
+                            span Found an issue? Send us
+                                =  ' '
+                                a#tm-support-email(href="mailto:support@securityinnovation.com") an email
+                                =  '.'
+    else
         #team-mentor-navigation
             a(href='/user/main.html')
                 #tm-logo
-            #customer-logo
-                //Img here
-            #links
-                +links-navbar__home
-                ul#message
-                    li
-                        +mail-icon
-                        span Found an issue? Send us
-                            =  ' '
-                            a#tm-support-email(href="mailto:support@securityinnovation.com") an email
-                            =  '.'
-
-    //if (custom-sony)
-        #team-mentor-navigation.sony
-            a(href='/user/main.html')
-                #tm-logo.sony-logo
-                    //Sony logo here
             #links
                 +links-navbar__home
                 ul#message
