Wiring up customizations.

--- a/_layouts/navbar_home.jade
+++ b/_layouts/navbar_home.jade
@@ -21,7 +21,7 @@ include ../_mixins/links.jade
         else
             #team-mentor-navigation
                 a(href='/user/main.html')
-                    #tm-logo
+                    #tm-logo(class="customization")
                 #customer-logo
                     img(src=global.custom.custom_navigation.logo)
                 #links
