--- a/_layouts/navbar_logged_out.jade
+++ b/_layouts/navbar_logged_out.jade
@@ -1,14 +1,30 @@
 include ../_mixins/links.jade
 
 .fixed.landing-page
-    #team-mentor-navigation
-        a(href='/')
-            if (global.custom && global.custom.custom_navigation)
-                #tm-logo(class="customization")
-            else
+    if (global.custom && global.custom.custom_navigation)
+        //Hides tm logo and shows navbar
+        if(global.custom.custom_navigation.NoTm)
+            #team-mentor-navigation(class=global.custom.custom_navigation.navbarclass)
+                a(href='/user/main.html')
+                    #tm-logo(class=global.custom.custom_navigation.logoclass)
+                        img(src=global.custom.custom_navigation.logo)
+
+                p(style=global.custom.custom_navigation.loggedOutTextStyle)
+                    span #{global.custom.custom_navigation.loggedInText}
+                #links
+                    +links-navbar__landing-page
+
+        else
+            #team-mentor-navigation
+                a(href='/user/main.html')
+                    #tm-logo(class="customization")
+                #customer-logo
+                    img(src=global.custom.custom_navigation.logo)
+                #links
+                    +links-navbar__landing-page
+    else
+        #team-mentor-navigation
+            a(href='/user/main.html')
                 #tm-logo
-        if (global.custom && global.custom.custom_navigation)
-            #customer-logo
-                img(src=global.custom.custom_navigation.logo)
-        #links
-            +links-navbar__landing-page
+            #links
+                +links-navbar__landing-page
