changing state to State

--- a/shared-mixins/globals.jade
+++ b/shared-mixins/globals.jade
@@ -56,7 +56,7 @@ mixin country-input
 
 mixin state-input
   label(for='state') State
-  input(type='text', id='state', name='state', placeholder='state',value='#{viewModel?viewModel.state:""}',maxlength='100')
+  input(type='text', id='state', name='state', placeholder='State',value='#{viewModel?viewModel.state:""}',maxlength='100')
 
 //- Form Buttons
 mixin login-button
