--- a/_layouts/navbar_custom_no_tm-logged-out.jade
+++ b/_layouts/navbar_custom_no_tm-logged-out.jade
@@ -1,13 +1,14 @@
 include ../_mixins/links.jade
 
 .fixed.landing-page
-    if (global.custom.custom_navigation)
-         -customSettings = global.custom.custom_navigation
-        #customer-navigation(style={background:customSettings.backgroundColor, height:customSettings.height})
-            #customer-logo(style ={'margin-top':customSettings.logoMargin})
-                img(src=global.custom.custom_navigation.logo)
-        p(style=customSettings.logoTextStyle)
-            span #{global.custom.custom_navigation.logoText}
+    if(global.custom.custom_navigation.NoTm)
+        #team-mentor-navigation(class=global.custom.custom_navigation.navbarclass)
+            a(href='/user/main.html')
+                #tm-logo(class=global.custom.custom_navigation.logoclass)
+                    img(src=global.custom.custom_navigation.logo)
 
-        p(style=customSettings.logoSubTextStyle)
-            span #{global.custom.custom_navigation.logoSubText}
+            p(style=global.custom.custom_navigation.logoTextStyle)
+                span #{global.custom.custom_navigation.logoText}
+
+            p(style=global.custom.custom_navigation.logoSubTextStyle)
+                span #{global.custom.custom_navigation.logoSubText}
