fix logo url bug

--- a/_layouts/navbar_logged_out.jade
+++ b/_layouts/navbar_logged_out.jade
@@ -16,7 +16,7 @@ include ../_mixins/links.jade
 
         else
             #team-mentor-navigation
-                a(href='/user/main.html')
+                a(href='/')
                     #tm-logo(class="customization")
                 #customer-logo
                     img(src=global.custom.custom_navigation.logo)
