--- a/user/article.jade
+++ b/user/article.jade
@@ -1,4 +1,4 @@
-extends ../_layouts/page_logged_in.jade
+extends ../_layouts/page.jade
 include ../_mixins/articles-mixins.jade
 include ../shared-mixins/globals.jade
 block content
