--- a/user/article.jade
+++ b/user/article.jade
@@ -7,6 +7,11 @@ block content
       .col-2
         .lge-container
       .col-8
+        unless loggedIn
+          .alert.alert-ok(role='alert')
+            #message
+              span.alert-icon !
+              span.alert-text Signup to unlock TEAMMentor content.
         .lge-container
           +article
           +copyright
