--- a/user/article.jade
+++ b/user/article.jade
@@ -4,16 +4,23 @@ include ../shared-mixins/globals.jade
 block content
   #application
     .row
-      .col-2
-        .lge-container
-      .col-8
-        unless loggedIn
+      if loggedIn
+        .col-2
+          .lge-container
+        .col-8
+          .lge-container
+            +article
+            +copyright
+      else
+        .col-1
+          .lge-container
+        .col-10
           .alert.alert-ok(role='alert')
             #message
               span.alert-icon !
-              span.alert-text Signup to unlock TEAMMentor content.
-        .lge-container
-          +article
-          +copyright
+              span.alert-text Welcome to TEAM Mentor. You have 5 article credits remaining. Sing up to unlock  full evaluation of TEAM Mentor.
+          .lge-container
+            +article
+            +copyright
       .col-2
         .lge-container
