--- a/user/article.jade
+++ b/user/article.jade
@@ -18,7 +18,8 @@ block content
           .alert.alert-ok(role='alert')
             #message
               span.alert-icon !
-              span.alert-text Welcome to TEAM Mentor. You have 5 article credits remaining. Sing up to unlock  full evaluation of TEAM Mentor.
+              if welcomeMessage
+                span.alert-text=welcomeMessage
           .lge-container
             +article
             +copyright
