Adding configuration values.

--- a/_layouts/navbar_home.jade
+++ b/_layouts/navbar_home.jade
@@ -48,7 +48,7 @@ include ../_mixins/links.jade
                         if internalUser
                             span Found an issue? Open it
                                 =  ' '
-                                a#tm-support-email(href="https://github.com/TeamMentor/TM_4_0_Design/issues") here
+                                a#tm-support-email(href=githubUrl) here
                                 =  '.'
                         else
                             span Found an issue? Send us
