Adding supportEmail to config file #829

--- a/_layouts/navbar_home.jade
+++ b/_layouts/navbar_home.jade
@@ -18,7 +18,7 @@ include ../_mixins/links.jade
                             +mail-icon
                             span Found an issue? Send us
                                 =  ' '
-                                a#tm-support-email(href="mailto:support@securityinnovation.com") an email
+                                a#tm-support-email(href=supportEmail) an email
                                 =  '.'
 
         else
@@ -34,7 +34,7 @@ include ../_mixins/links.jade
                             +mail-icon
                             span Found an issue? Send us
                                 =  ' '
-                                a#tm-support-email(href="mailto:support@securityinnovation.com") an email
+                                a#tm-support-email(href=supportEmail) an email
                                 =  '.'
     else
         #team-mentor-navigation
@@ -53,5 +53,5 @@ include ../_mixins/links.jade
                         else
                             span Found an issue? Send us
                                 =  ' '
-                                a#tm-support-email(href="mailto:support@securityinnovation.com") an email
+                                a#tm-support-email(href=supportEmail) an email
                                 =  '.'
