--- a/shared-mixins/globals.jade
+++ b/shared-mixins/globals.jade
@@ -1,5 +1,5 @@
 mixin tm-support-email
-  a#tm-support-email(href='mailto:support@securityinnovation.com') support@securityinnovation.com
+  a#tm-support-email(href=supportEmail) support@securityinnovation.com
 
 //- Breadcrumbs
 mixin breadcrumbs
