--- a/_mixins/articles-mixins.jade
+++ b/_mixins/articles-mixins.jade
@@ -14,7 +14,7 @@ mixin article
         .alert.alert-neutral
             span.alert-icon !
             span.alert-text Have a comment about this article?
-                a#tm-support-email(href='mailto:support@securityinnovation.com')      Send our team an email.
+                a#tm-support-email(href=supportEmail)      Send our team an email.
 
 mixin no-article
     #article.bg.content
