--- a/_layouts/navbar_home.jade
+++ b/_layouts/navbar_home.jade
@@ -48,7 +48,7 @@ include ../_mixins/links.jade
                         if internalUser
                             span Found an issue? Open it
                                 =  ' '
-                                a#tm-support-email(href=githubUrl target="_blank") here
+                                a#tm-support-link(href=githubUrl target="_blank") here
                                 =  '.'
                         else
                             span Found an issue? Send us
