--- a/_layouts/head.jade
+++ b/_layouts/head.jade
@@ -13,3 +13,4 @@ head
     link(rel='shortcut icon', href='/assets/favicons/favicon.ico')
   link(rel='icon', href='/assets/favicons/favicon-modern.ico')
   link(href="/css/jade-stylesheet.css" rel="stylesheet")
+  link(href="/css/syntax-highlighting-github-style.css" rel="stylesheet")
