--- a/_mixins/search-mixins.jade
+++ b/_mixins/search-mixins.jade
@@ -27,7 +27,7 @@ mixin search-bar-input
             .row
                 .col-offset-2.col-8
                     #search-input
-                        form(action='/search', method='GET')
+                        form(action='/jade/search', method='GET')
                             label(for='search-input') Search...
                             .input-group
                                 input.form-control(type='text', id='search-input', name='text')
@@ -38,7 +38,7 @@ mixin search-2
     #search-div-2
         .lge-container
             #search-input
-                form(action='/search', method='GET')
+                form(action='/jade/search', method='GET')
                     label(for='search-input') Search...
                     .input-group
                         input.form-control(type='text', name='text', value= text)
@@ -106,7 +106,7 @@ mixin main-app-view
                         for recent_Article in recent_Articles
                           tr
                             td
-                                a(href='/article/' + recent_Article.id.remove('article-') + '/' + recent_Article.title.replace(/ /g,'-').remove('.'), id=recent_Article.id)
+                                a(href='/jade/article/' + recent_Article.id.remove('article-') + '/' + recent_Article.title.replace(/ /g,'-').remove('.'), id=recent_Article.id)
                                     = recent_Article.title
         if (top_Searches)
             .bg
@@ -116,7 +116,7 @@ mixin main-app-view
                         for top_Search in top_Searches
                             tr
                                 td
-                                    a(href='/search?text=' + top_Search.title.str().url_Encode())
+                                    a(href='/jade/search?text=' + top_Search.title.str().url_Encode())
                                         = top_Search.title
             .bg
                 #top-articles
@@ -126,7 +126,7 @@ mixin main-app-view
                             tr
                                 td
                                     //a(href=top_Article.href)
-                                    a(href= top_Article.href.remove('article-') + '/' + top_Article.title.replace(/ /g,'-').remove('.'), id=top_Article.id)
+                                    a(href= '/jade' + top_Article.href.remove('article-') + '/' + top_Article.title.replace(/ /g,'-').remove('.'), id=top_Article.id)
                                         = top_Article.title
         //if (newArticles)
             .bg
@@ -150,7 +150,7 @@ mixin articles-list
                                 td.filter-icons
                                     span.label= '#' + (index +1)
                                 td
-                                    a(href='/article/' + result.id.remove('article-') + '/' + result.title.replace(/ /g,'-').remove('.'), id=result.id)
+                                    a(href='/jade/article/' + result.id.remove('article-') + '/' + result.title.replace(/ /g,'-').remove('.'), id=result.id)
                                         h4= result.title
                             tr
                                 td.filter-icons
