--- a/_mixins/view-blocks.jade
+++ b/_mixins/view-blocks.jade
@@ -38,7 +38,7 @@ mixin help-navigation
           each article in view.Articles
             tr
               td
-                a(href= '/help/' + article.Id)= article.Title
+                a(href= '/jade/help/' + article.Id)= article.Title
 mixin help-index
   #help.bg.content
 
