fix for https://github.com/TeamMentor/TM_4_0_Design/issues/1026

--- a/_layouts/navbar_home.jade
+++ b/_layouts/navbar_home.jade
@@ -5,7 +5,7 @@ include ../_mixins/links.jade
         //Hides tm logo and shows navbar
         if(global.custom.custom_navigation.NoTm)
             #team-mentor-navigation(class=global.custom.custom_navigation.navbarclass)
-                a(href='/user/main.html')
+                a(href='/jade/user/main.html')
                     #tm-logo(class=global.custom.custom_navigation.logoclass)
                         img(src=global.custom.custom_navigation.logo)
 
@@ -23,7 +23,7 @@ include ../_mixins/links.jade
 
         else
             #team-mentor-navigation
-                a(href='/user/main.html')
+                a(href='/jade/user/main.html')
                     #tm-logo(class="customization")
                 #customer-logo
                     img(src=global.custom.custom_navigation.logo)
@@ -38,7 +38,7 @@ include ../_mixins/links.jade
                                 =  '.'
     else
         #team-mentor-navigation
-            a(href='/user/main.html')
+            a(href='/jade/user/main.html')
                 #tm-logo
             #links
                 +links-navbar__home
