fix for https://github.com/TeamMentor/TM_4_0_Design/issues/1027

--- a/_mixins/user-mixins.jade
+++ b/_mixins/user-mixins.jade
@@ -104,7 +104,7 @@ mixin forgot-password-form
         +get-password-button
 
 //- pwd-reset-form
-//mixin pwd-reset-form
+mixin pwd-reset-form
   form#pwd-reset-form(role='form' method='post')
     h4 Reset your password
     .form-group
