--- a/_layouts/head.jade
+++ b/_layouts/head.jade
@@ -9,10 +9,12 @@ head
   meta(name       ="description"      content=""                                               )
   meta(name       ="author"           content=""                                               )
 
-  //if IE
-    link(rel='shortcut icon', href='/assets/favicons/favicon.ico')
+  <!--[if IE]>
+  link(rel='shortcut icon', href='/assets/favicons/favicon.ico')
+  <![endif]-->
   link(rel='icon', href='/assets/favicons/favicon-modern.ico')
-  //if lt IE 9
-    link(rel='stylesheet', type='text/css', href='/css/jade-legacy-stylesheet.css')
-    link(href="/css/syntax-highlighting-github-style.css" rel="stylesheet"
+  <!--[if lte IE 9]>
+  link(rel='stylesheet', type='text/css', href='/css/jade-legacy-stylesheet.css')
+  link(href="/css/syntax-highlighting-github-style.css" rel="stylesheet")
+  <![endif]-->
   link(href="/css/jade-stylesheet.css" rel="stylesheet")
