--- a/_mixins/landing-page-mixins.jade
+++ b/_mixins/landing-page-mixins.jade
@@ -109,9 +109,12 @@ mixin footer-div
                     li
                         a#tm-support-email(href=supportEmail title='Email')
                             +mail-icon
+                            span.text Email
                     li
                         a#tm-twitter(href='http://www.twitter.com/SecInnovation' target='_blank' title='Twitter')
                             +twitter-icon
+                            span.text Twitter
                     li
                         a#terms-and-conditions(href='../misc/terms-and-conditions' title ='Terms and Conditions')
                             +paperclip-icon
+                            span.text Terms
