work on footer for ie

--- a/_mixins/user-mixins.jade
+++ b/_mixins/user-mixins.jade
@@ -6,17 +6,17 @@ mixin team-mentor-summary
     table
       tr
         td
-          .fix-vulnerabilities
+          img(src='/assets/icons/ie/fix-vulnerabilities.png')
         td
           include:marked ../../TM_Static/content/getting-started/summary-point-1.md
       tr
         td
-          .reduce-vulnerabilities
+          img(src='/assets/icons/ie/reduce-vulnerabilities.png')
         td
           include:marked ../../TM_Static/content/getting-started/summary-point-2.md
       tr
         td
-          .improve-process
+          img(src='/assets/icons/ie/expand-knowledge.png')
         td
           include:marked ../../TM_Static/content/getting-started/summary-point-3.md
 
