--- a/_mixins/links.jade
+++ b/_mixins/links.jade
@@ -25,8 +25,9 @@ mixin links-navbar__home
 	ul
 		li
 			a#nav-user-main(href='/jade/user/main.html')
-				+search-icon
-				span Search
+				span.icon
+					+search-icon
+				span.text Search
 		li
 			a#nav-user-guidance(href='/jade/show/')
 				+index-icon
