fixing big is pwd-reset-form

--- a/guest/pwd-reset-fail.jade
+++ b/guest/pwd-reset-fail.jade
@@ -1,4 +1,5 @@
 extends ../_layouts/page_logged_out
+include ../_mixins/links
 include ../_mixins/user-mixins
 include ../_mixins/landing-page-mixins
 block content
