--- a/_mixins/user-mixins.jade
+++ b/_mixins/user-mixins.jade
@@ -103,8 +103,7 @@ mixin forgot-password-form
       .col-7
         +get-password-button
 
-//- pwd-reset-form
-//mixin pwd-reset-form
+mixin pwd-reset-form
   form#pwd-reset-form(role='form' method='post')
     h4 Reset your password
     .form-group
