--- a/guest/pwd-reset.jade
+++ b/guest/pwd-reset.jade
@@ -1,5 +1,6 @@
 extends ../_layouts/page_logged_out
 include ../shared-mixins/globals
+include ../_mixins/links
 include ../_mixins/user-mixins
 include ../_mixins/landing-page-mixins
 block content
