--- a/_mixins/landing-page-mixins.jade
+++ b/_mixins/landing-page-mixins.jade
@@ -19,17 +19,17 @@ mixin reasons-div
                         table
                             tr
                                 td
-                                    img(src='/assets/icons/ie/fix-vulnerabilities.png')
+                                    img(src='/assets/icons/ie/fix-vulnerabilities.jpg')
                                 td
                                     include:marked ../../TM_Static/content/landing-pages/selling-point-1.md
                             tr
                                 td
-                                    img(src='/assets/icons/ie/reduce-vulnerabilities.png')
+                                    img(src='/assets/icons/ie/reduce-vulnerabilities.jpg')
                                 td
                                     include:marked ../../TM_Static/content/landing-pages/selling-point-2.md
                             tr
                                 td
-                                    img(src='/assets/icons/ie/expand-knowledge.png')
+                                    img(src='/assets/icons/ie/expand-knowledge.jpg')
                                 td
                                     include:marked ../../TM_Static/content/landing-pages/selling-point-3.md
 
@@ -63,22 +63,22 @@ mixin features-div
                     table
                         tr
                             td
-                                img(src='/assets/icons/ie/delivers-compliance.png')
+                                img(src='/assets/icons/ie/delivers-compliance.jpg')
                             td
                                 include:marked ../../TM_Static/content/landing-pages/feature-1.md
                         tr
                             td
-                                img(src='/assets/icons/ie/integrates.png')
+                                img(src='/assets/icons/ie/integrates.jpg')
                             td
                                 include:marked ../../TM_Static/content/landing-pages/feature-2.md
                         tr
                             td
-                                img(src='/assets/icons/ie/cross-references.png')
+                                img(src='/assets/icons/ie/cross-references.jpg')
                             td
                                 include:marked ../../TM_Static/content/landing-pages/feature-3.md
                         tr
                             td
-                                img(src='/assets/icons/ie/provides-guidance.png')
+                                img(src='/assets/icons/ie/provides-guidance.jpg')
                             td
                                 include:marked ../../TM_Static/content/landing-pages/feature-4.md
 
@@ -99,7 +99,7 @@ mixin footer-div
             .col-6
                 ul.si
                     li
-                        img(src='/assets/logos/si-logo.png' width='15px' height='15px')
+                        img(src='/assets/logos/si-logo.jpg' width='15px' height='15px')
                     li
                         a(href='http://www.securityinnovation.com/', target='_blank') Security Innovation 2015. All rights reserved.
             .col-offset-2.col-4
@@ -109,12 +109,9 @@ mixin footer-div
                     li
                         a#tm-support-email(href=supportEmail title='Email')
                             +mail-icon
-                            span.text Email
                     li
                         a#tm-twitter(href='http://www.twitter.com/SecInnovation' target='_blank' title='Twitter')
                             +twitter-icon
-                            span.text Twitter
                     li
                         a#terms-and-conditions(href='../misc/terms-and-conditions' title ='Terms and Conditions')
                             +paperclip-icon
-                            span.text Terms
