--- a/_mixins/user-mixins.jade
+++ b/_mixins/user-mixins.jade
@@ -6,17 +6,17 @@ mixin team-mentor-summary
     table
       tr
         td
-          img(src='/assets/icons/ie/fix-vulnerabilities.png')
+          img(src='/assets/icons/ie/fix-vulnerabilities.jpg')
         td
           include:marked ../../TM_Static/content/getting-started/summary-point-1.md
       tr
         td
-          img(src='/assets/icons/ie/reduce-vulnerabilities.png')
+          img(src='/assets/icons/ie/reduce-vulnerabilities.jpg')
         td
           include:marked ../../TM_Static/content/getting-started/summary-point-2.md
       tr
         td
-          img(src='/assets/icons/ie/expand-knowledge.png')
+          img(src='/assets/icons/ie/expand-knowledge.jpg')
         td
           include:marked ../../TM_Static/content/getting-started/summary-point-3.md
 
