--- a/_layouts/navbar_custom_no_tm-logged-out.jade
+++ b/_layouts/navbar_custom_no_tm-logged-out.jade
@@ -3,7 +3,7 @@ include ../_mixins/links.jade
 .fixed.landing-page
     if(global.custom.custom_navigation.NoTm)
         #team-mentor-navigation(class=global.custom.custom_navigation.navbarclass)
-            a(href='/jade/user/main.html')
+            a(href='/jade/show')
                 #tm-logo(class=global.custom.custom_navigation.logoclass)
                     img(src=global.custom.custom_navigation.logo)
 
