Fixing Terms and conditions

--- a/_mixins/landing-page-mixins.jade
+++ b/_mixins/landing-page-mixins.jade
@@ -113,5 +113,5 @@ mixin footer-div
                         a#tm-twitter(href='http://www.twitter.com/SecInnovation' target='_blank' title='Twitter')
                             +twitter-icon
                     li
-                        a#terms-and-conditions(href='../guest/terms-and-conditions' title ='Terms and Conditions')
+                        a#terms-and-conditions(href='guest/terms-and-conditions' title ='Terms and Conditions')
                             +paperclip-icon
