Fixing broken link on Terms and conditions on Jade article.

--- a/_mixins/globals.jade
+++ b/_mixins/globals.jade
@@ -17,7 +17,7 @@ mixin copyright
                         a(href='mailto:support@securityinnovation.com') support@securityinnovation.com
                     li
                         +paperclip-icon
-                        a#terms-and-conditions(href="/misc/terms-and-conditions") Terms & Conditions
+                        a#terms-and-conditions(href="../../guest/terms-and-conditions") Terms & Conditions
 
 //- Icons
 mixin search-icon
