Fixing email mailto link.

--- a/_mixins/landing-page-mixins.jade
+++ b/_mixins/landing-page-mixins.jade
@@ -107,7 +107,7 @@ mixin footer-div
                     li
                         .label TEAM Mentor 4.0
                     li
-                        a#tm-support-email(href=supportEmail title='Email')
+                        a#tm-support-email(href='mailto:support@securityinnovation.com' title='Email')
                             +mail-icon
                     li
                         a#tm-twitter(href='http://www.twitter.com/SecInnovation' target='_blank' title='Twitter')
