Adding Privacy Policy

--- a/_mixins/links.jade
+++ b/_mixins/links.jade
@@ -99,3 +99,6 @@ mixin terms-and-conditions-links
 			tr
 				td
 					a(href='#article-xviii-general-provisions') Article XVIII - General Provisions
+			tr
+				td
+					a(href='#privacy-policy') Privacy Policy
