Hiding logout button  if anonymous access is enabled.

--- a/_mixins/links.jade
+++ b/_mixins/links.jade
@@ -36,10 +36,11 @@ mixin links-navbar__home
 			a#nav-user-help(href='/jade/help/index.html')
 				+info-icon
 				span Docs
-		li
-			a#nav-user-logout(href='/jade/user/logout')
-				+logout-icon
-				span Logout
+		if !hideLogout
+			li
+				a#nav-user-logout(href='/jade/user/logout')
+					+logout-icon
+					span Logout
 
 mixin terms-and-conditions-links
 	.bg#help-nav
