Fixing copyright note jade

--- a/_mixins/landing-page-mixins.jade
+++ b/_mixins/landing-page-mixins.jade
@@ -101,7 +101,7 @@ mixin footer-div
                     li
                         img(src='/assets/logos/si-logo.jpg' width='15px' height='15px')
                     li
-                        a(href='http://www.securityinnovation.com/', target='_blank') Security Innovation 2015. All rights reserved.
+                        a(href='http://www.securityinnovation.com/', target='_blank') Security Innovation 2007-2016. All rights reserved.
             .col-offset-2.col-4
                 ul.contact
                     li
