--- a/_mixins/globals.jade
+++ b/_mixins/globals.jade
@@ -1,8 +1,8 @@
 include ../shared-mixins/globals.jade
 
 //- static texts
-- var head_title = 'TEAM Mentor 4.2 (Html version)'
-- var tm_version  = 'TEAM Mentor v4.0 (Alpha 15)'
+- var head_title = 'TEAM Mentor 4.5 (Html version)'
+- var tm_version  = 'TEAM Mentor 4.5'
 
 mixin copyright
     #copyright
